# ZephyrSim

./: .gitignore  ConfigDialog.py  MainWindowQt.py  README.md  SerialProcessor.py  ZephyrSim.py  ZephyrSimGUI.py  ZephyrSimProcess.py  ZephyrSimResources.qrc  ZephyrSimResources_rc.py  ZephyrSimUtils.py  pyproject.toml  requirements.txt
Resources/MacOS/: README.md
Resources/MacOS/ZephyrSim.app/Contents/: Info.plist
Resources/MacOS/ZephyrSim.app/Contents/MacOS/: ZephyrSim
Resources/MacOS/ZephyrSim.app/Contents/Resources/: icon.icns
docs/: serial-framing-errors.md  zephyr-framing-design.md
src/zephyrsim/: ConfigDialog.py  DiagnosticsWidget.py  MainWindowQt.py  SerialProcessor.py  TCSequenceWidget.py  ZephyrFramer.py  ZephyrSignals.py  ZephyrSimGUI.py  __init__.py  app.py
