[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "zephyrsim"
version = "0.1.0"
description = "PyQt-based Zephyr simulator"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "PyQt6",
  "xmltodict",
  "pyperclip",
]

[project.scripts]
zephyrsim = "zephyrsim.app:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
zephyrsim = ["ZephyrSimResources_rc.py"]
